# dcsbot

./: .gitignore  Cargo.toml  README.md  build.sh
.github/workflows/: ci.yml
src/: bot.rs  dcs.rs  handler.rs  main.rs
